# internetarchive-search

./: .gitignore  LICENSE  README.md  ia_search.py  pyproject.toml
completions/: _ia-search  ia-search.bash
src/ia_search/: __init__.py
