[project]
name = "ia-search"
version = "0.1.0"
description = "CLI to search archive.org and print colored table results"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Your Name" }
]
license = { text = "MIT" }

dependencies = [
  "requests>=2.28"
]

[project.urls]
Homepage = "https://archive.org/"

[project.scripts]
ia-search = "ia_search:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

