[project]
name = "ia-search"
version = "0.1.0"
description = "CLI to search archive.org and download files"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "DomG" }
]
license = { text = "MIT" }

dependencies = [
  "requests>=2.28",
  "pySmartDL>=1.3"
]

[project.urls]
Homepage = "https://github.com/domgregori/internetarchive-search"

[project.scripts]
ia-search = "ia_search:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
